@@ -10,6 +10,7 @@ Date: 00. 00. 0000
     - Fixed a crash when opening the machine dialog for a machine that uses fluid fuels
     - Fixed a crash when opening the districts view on a migrated save (#369)
     - Fixed a crash when trying to reset a machine while the matrix solver is active (#374)
+    - Fixed a crash when setting a machine limit on recipes that don't calculate a machine amount (#354)
     - Fixed that entering a decimal beacon amount would crash
     - Fixed a couple of migration-related crashes
     - Fixed that compatible module detection would not always work properly
